@@ -1,3 +1,7 @@
+2009-01-09  Lars Hartmann  <lars (at) chaotika (dot) org>
+
+	* lib/Makefile: modified to produce propperly linked dynamic objects
+
 2009-01-08  Lars Hartmann  <lars (at) chaotika (dot) org>
 
 	* lib/liblputil.h: added comments
